change the title of the page on the creator page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <label for="check">
                 <i class="fas fa-bars menu-btn"></i>
-                <i class="fas fa-times close-btn"></i>
+                <i class="fas fa-times closs-btn"></i>
             </label>
         </header>
         <div class="content">
